# geotrace-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ghcr-publish.yml
app/: Dockerfile  config.py  errors.py  main.py  models.py
app/a2a/cards/: rendezvous_finder.yaml  space_time_reasoner.yaml
app/agents/: gap_detector.py  planner.py  validator.py
app/agents/tools/: __init__.py  road_network.py  web_search.py
app/components/: space_time_prism.py
app/components/pidpm/: diffusion.py  scoring.py  train.py
app/mcp_servers/: ais_mcp.py  prism_mcp.py
app/security/: content_filter.py  input_guard.py  output_filter.py
app/services/: conversation.py  orchestrator.py  query_rewriter.py  query_router.py  token_optimizer.py
app/temporal/: DESIGN.md  __init__.py  activities.py  models.py  run_client.py  worker.py  workflows.py
docker/: Dockerfile.cpu
docs/: EXPLAINED.md  api-reference.md  architecture.md  deployment.md  index.html
evaluation/: ablation.py  golden_dataset.json  offline_eval.py  online_monitor.py  validator_audit.py
evaluation/ablation_results/: 20260629T080824Z.json  20260629T080824Z.md
evaluation/eval_results/: 20260629T080230Z.json  20260629T080230Z.md  20260629T225136Z.json  20260629T225136Z.md  20260629T225637Z.json  20260629T225637Z.md  20260629T230145Z.json  20260629T230145Z.md
evaluation/validator_audit_results/: 20260629T081027Z.json  20260629T081027Z.md
frontend/: Dockerfile  app.py  requirements.txt
observability/: cost_tracker.py  feedback.py  otel-config.yaml  tempo.yaml  tracer.py
paper/: Makefile  README.md  geotrace_agent_neurips.tex
scripts/: bench.py  ci_local.sh  healthcheck.py  migrate.py  seed.py
spaces/hf-demo/: .gitignore  README.md  packages.txt  requirements.txt  streamlit_app.py  verify_live_space.py
spaces/hf-demo/app/: config.py
spaces/hf-demo/app/a2a/: protocol.py
spaces/hf-demo/app/components/: hybrid_retriever.py  reranker.py
spaces/hf-demo/app/prompts/: registry.py  templates.py
spaces/hf-demo/app/services/: semantic_cache.py  token_optimizer.py  tool_batcher.py
tests/: test_api_integration.py  test_cache.py  test_kinematics.py  test_orchestrator.py  test_planner.py  test_prism.py  test_prism_properties.py  test_temporal_workflow.py
(+4 files in other folders)
