[project]
name = "geotrace-agent"
version = "0.1.0"
description = "Production-grade agentic AI for spatiotemporal trajectory reasoning"
authors = [{ name = "Arun Sharma", email = "arunshar@umn.edu" }]
requires-python = ">=3.11,<3.13"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "anyio>=4.4",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "redis>=5.0",
  "chromadb>=0.5",
  "shapely>=2.0",
  "pyproj>=3.6",
  "numpy>=1.26",
  "scipy>=1.13",
  "rtree>=1.2",
  "geopandas>=0.14",
  "anthropic>=0.40",
  "openai>=1.40",
  "tiktoken>=0.7",
  "tenacity>=8.3",
  "structlog>=24.1",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "langfuse>=2.40",
  "Pyro5>=5.15",
  "rich>=13.7",
  "orjson>=3.10",
  "prometheus-client>=0.20",
  "temporalio>=1.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
  "hypothesis>=6.108",
]
frontend = ["streamlit>=1.36", "plotly>=5.22", "folium>=0.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "observability", "evaluation"]

[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","RUF"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]            # tests can have long literal data
"**/prompts/templates.py" = ["RUF001"]  # en-dashes in human-readable prompts are intentional (matches both app/ and the vendored spaces/hf-demo/app/)
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
[tool.coverage.run]
branch = true
source = ["app", "observability"]
omit = [
  "app/agents/tools/*",
  "app/mcp_servers/*",
  "app/services/conversation.py",
  "app/services/query_rewriter.py",
  "app/services/query_router.py",
  "app/services/tool_batcher.py",
  "app/components/hybrid_retriever.py",
  "app/components/reranker.py",
  "app/a2a/protocol.py",
  "app/protocols/*",
]
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
